--- a/despesas/templates/despesas/base.html
+++ b/despesas/templates/despesas/base.html
@@ -64,7 +64,12 @@
                                 <li><a class="dropdown-item" href="{% url 'admin:index' %}">Administração</a></li>
                                 {% endif %}
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'logout' %}">Sair</a></li>
+                                <li><form id="logout-form" method="post" action="{% url 'logout' %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="dropdown-item" style="background: none; border: none; padding: 0; margin: 0;">
+                                        Sair
+                                    </button>
+                                </form></li>
                             </ul>
                         </li>
                     {% else %}
